# Prediction-Market-Scanner

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  ingest.yml
data/: candidates.csv  summary.json
src/pm_scanner/: __init__.py  candidates.py  dutchbook.py  export.py  fees.py  frictions.py  http.py  ingest.py  kalshi.py  models.py  polymarket.py  slippage.py  storage.py
tests/: conftest.py  test_candidates.py  test_dutchbook.py  test_export.py  test_fees.py  test_frictions.py  test_http.py  test_ingest.py  test_kalshi_mapper.py  test_polymarket_mapper.py  test_slippage.py  test_smoke.py  test_storage.py
tests/fixtures/: gamma_markets_page.json  kalshi_events_page.json
