[project]
name = "prediction-market-scanner"
version = "0.1.0"
description = "Arbitrage scanner for prediction markets: Dutch-book detection on Kalshi and cross-platform divergence vs Polymarket, with rigorous friction accounting."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
# pandas waits until a phase actually needs dataframes (likely Phase 5
# analysis); ingestion is fine on the stdlib's sqlite3.
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src/ layout: the package can't be imported from the repo root by accident,
# so tests exercise the installed package exactly as CI and users would see it.
[tool.hatch.build.targets.wheel]
packages = ["src/pm_scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
